--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,8 +108,8 @@
               {% when 'Exercise & Fitness' %}
                 <li><a href="/#exercise-fitness-">{{ page.category }}</a></li>
               {% when 'Sleep & Rest' %}
-                <li><a href="/#sleep-optimization-">{{ page.category }}</a></li>
-              {% when 'Brain Health & Stress Management' %}
+                <li><a href="/#sleep-rest-">{{ page.category }}</a></li>
+              {% when 'Brain & Stress' %}
                 <li><a href="/#brain-stress-">{{ page.category }}</a></li>
               {% when 'Happiness & Spirituality' %}
                 <li><a href="/#happiness-spirituality-">{{ page.category }}</a></li>
