--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,10 @@
       <h4>Resources</h4>
       <ul>
         <li><a href="/about/">About This Guide</a></li>
+        <li><a href="/nutrition/">Nutrition Guide</a></li>
+        <li><a href="/fitness/">Fitness Guide</a></li>
+        <li><a href="/sleep/">Sleep Guide</a></li>
+        <li><a href="/feed.xml" target="_blank">RSS Feed</a></li>
       </ul>
     </div>
     
