--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: "en-US" }}" itemscope itemtype="https://schema.org/WebPage">
   <head>
     <meta charset="UTF-8">
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.ga4_id }}"></script>
