--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -33,7 +33,7 @@
 <meta name="twitter:image:alt" content="Thriving Healthy - Your comprehensive resource for health and wellness">
 
 <!-- Canonical URL -->
-<link rel="canonical" href="{{ page.url | absolute_url }}">
+<link rel="canonical" href="{{ page.url | absolute_url | replace: 'index.html', '' | replace: '.html', '' }}">
 
 <!-- RSS Feed -->
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} RSS Feed" href="{{ '/feed.xml' | absolute_url }}">
